Update actions State and Region BR
Update actions State and Region BR for the question if we want to add a country, region or state to covid situation asking

--- a/bot/languages/br/domain.yml
+++ b/bot/languages/br/domain.yml
@@ -454,6 +454,8 @@ intents:
 - covid_diferenca_testes
 - covid_situation_region
 - covid_situation_state
+- state_br
+- region_br
 
 responses:
   utter_command_change_bot:
