--- a/bot/languages/br/domain.yml
+++ b/bot/languages/br/domain.yml
@@ -15,7 +15,7 @@ slots:
     initial_value: br
   bot_introduced:
     type: bool
-    initial_value: false
+    initial_value: False
   bot_version:
     type: text
     initial_value: '0.1.1'
